@@ -44,6 +44,7 @@
     <script language="JavaScript" src="jjs_set_tests.js"></script>
     <script language="JavaScript" src="jjs_func_rettype_tests.js"></script>
     <script language="JavaScript" src="jjs_func_parameters_tests.js"></script>
+    <script language="JavaScript" src="jjs_eval_test.js"></script>
 
 </HEAD>
 
@@ -66,6 +67,7 @@
                 <input type=checkbox name="jjsset"><tt>Java -> JS set tests</tt><BR>
                 <input type=checkbox name="jjcparam"><tt>Java -> JS function parameter conversion tests</tt><BR>
                 <input type=checkbox name="jjcrt"><tt>Java -> JS function return type tests</tt><BR>
+                <input type=checkbox name="jjeval"><tt>Java -> JS eval test</tt><BR>
             </td>
         </tr>
         <tr>
